data/derived/fa15/progs/unify/prog4034.ml.out
Characters 29-51:
  let fixpoint (f,b) = wwhile ((f b, not ((f b) = b)),b);;
                               ^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
